deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speech-companion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: speech-companion
  template:
    metadata:
      labels:
        app: speech-companion
    spec:
      containers:
        - image: prajwalj27/speech-companion
          name: speech-companion
