service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speech-companion
  labels:
    app: speech-companion
spec:
  ports:
    - name: "speech-companion"
      port: 3000
  selector:
    app: speech-companion
